--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redirecting...</title>
   <script>
-    location.href = 'https://ikangjia.notion.site/ikangjia/5d2a7dfa92374d7fb35baf2f34d40c77';
+    location.href = 'https://ikangjia.notion.site/fa8ae3d90b934a90864b3036b409fb19?pvs=4';
   </script>
 </head>
 <body>
